--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h2>Menu</h2>
                 <nav class="navegacion">
                         <ul>
-                            <li><a href="index.html">Inicio</a></li> 
+                            <li><a href="index.html">Inicioooooooooooooooooooooooooooooooooooo</a></li> 
                             <li><a href="importancia.html">Importancia</a></li> 
                             <li><a href="consecuencias.html">Consecuencias</a></li> 
                             <li><a href="recomendacion.html">Recomendaciones</a></li> 
